# Projeto_FAP_Solar_Matheus

./: README.md
Adc_v1.0/: CMakeLists.txt
Adc_v1.0/main/: CMakeLists.txt  adc_calc.c  main.h
Adc_v1.3/main/: main.c
Circular_buffer/: CMakeLists.txt
Circular_buffer/main/: circular_buffer.c  circular_buffer.h
Firmware /: Att - Matheus.txt
Firmware /ADC_buffer/: README.md
Firmware /ADC_buffer/main/: Setup_adc.c  Setup_adc.h  Tasks.c  Tasks.h  Timer.c  global.c  global.h  libraries.h  timer.md
Firmware /ADC_v.1.4/main/: CMakeLists.txt  Setup_adc.c  Setup_adc.h  main.c
Firmware /Adc teste/: CMakeLists.txt
Firmware /Adc teste/main/: ADC_config.c  CMakeLists.txt  main.c
Firmware /Adc_v1.0/main/: adc_calc.h  main.c
Firmware /Adc_v1.3/: CMakeLists.txt
Firmware /Aquisition_1.0/: CMakeLists.txt
Firmware /Aquisition_1.0/main/: CMakeLists.txt  Energy.c  Tasks.c  Temp.c  Temp.h  Timer.c  global.c  global.h  libraries.h
Firmware /Circular buffer2/: CMakeLists.txt
Firmware /Circular buffer2/main/: CMakeLists.txt  circular_buffer.h  main.c
Firmware /Circular_buffer/main/: main.c
Firmware /Ring buffer/: CMakeLists.txt
Firmware /Ring buffer/main/: main.c
Firmware /RingBuffer_With_ADC/: CMakeLists.txt
Firmware /RingBuffer_With_ADC/main/: Setup_adc.h
Firmware /Timer_1ms/: CMakeLists.txt  README.md
Firmware /Timer_1ms/main/: main.c
Firmware /Timer_ADC_get/: CMakeLists.txt  README.md
Firmware /Timer_ADC_get/main/: CMakeLists.txt  Setup_adc.c  Setup_adc.h  Tasks.c  Timer.c  Timer.h  global.h  libraries.h  main.c
Firmware /blink/: sdkconfig
(+2 files in other folders)
